--- a/PRNAssG8/PRNAssG8/Views/HomePage/Index.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/HomePage/Index.cshtml
@@ -25,8 +25,9 @@
   <link rel="stylesheet" href="~/Content/vendors/animate-css/animate.css" />
   <link rel="stylesheet" href="~/Content/vendors/jquery-ui/jquery-ui.css" />
   <!-- main css -->
-  <link rel="stylesheet" href="~\Content/css/style.css" />
-  <link rel="stylesheet" href="~\Content/css/responsive.css" />
+  <link rel="stylesheet" href="~/Content/css/style.css" />
+  <link rel="stylesheet" href="~/Content/css/responsive.css" />
+
 </head>
 
 <body>
