--- a/PRNAssG8/PRNAssG8/Views/Product/Insert.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Product/Insert.cshtml
@@ -9,23 +9,43 @@
 <head>
 <title>Page Title</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<style>
+    .all{
+        padding: 20px ;
+        margin:auto;
+        width:50%;
+        border: 1px solid;
+        box-shadow: 3px 8px #888888;
+    }
+</style>
 </head>
 <body>
+    <div class="all">
 
-<form>
-    ProductName: <input type="text" name="ProductName" />
-    UserId:<input type="text" name="UserId" />
-    Image:<input type="image" name="Image" />
-    Price:<input type="text" name="Price" />
-    Date:<input type="datetime" name="Date" />
-    Detail:<input type="text" name="Detail" />
-    <select>
-            @foreach(var p in ViewBag.cate)
-            {
-                <option value="p.CategoryId">p.CategoryName</option>
-            }
-        </select>
-</form>
+   
+        <form asp-controller="Product" asp-action="Insert" method="post">
+            ProductName: <input type="text" name="ProductName" class="form-control"/><br />
+            <input type="text" name="UserId" value="1" style="display:none;" />
+            Image:<input type="file" name="Image" class="form-control"/><br />
+            Price:<input type="text" name="Price" class="form-control"/><br />
+            Date:<input type="date" name="Date" class="form-control"/><br />
+            <div class="input-group">
+            <span class="input-group-text">Detail</span><textarea name="Detail" class="form-control"></textarea>
+            </div><br />
+            CategoryId:<select name="CategoryId" class="form-select">
+                    @foreach(var p in ViewBag.cate)
+                    {
+                        <option value="@p.CategoryId">@p.CategoryName</option>
+                    }
+                </select><br />
+            Status:<select name="Status" class="form-select">
+                <option value="1">activate</option>
+                <option value="0">non  activate</option>
+            </select><br />
+             <button type="submit"  class="btn btn-primary">Add</button>
+
+        </form>
+    </div>
 
 </body>
 </html>
