--- a/PRNAssG8/PRNAssG8/Views/Shared/_Layout.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light w-100">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <a class="navbar-brand logo_h" href="index.html">
+          <a class="navbar-brand logo_h" asp-controller= "home" asp-action = "index">
             <img src="~/img/logo.png" alt="" />
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -66,7 +66,10 @@
                       </li>
                     </ul>
                   </li>
-                  
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Up Load</a>
+                  </li>
+                 </ul> 
                  
                   
               </div>
@@ -92,7 +95,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="icons">
+                    <a class="icons">
                       <i class="ti-heart" aria-hidden="true"></i>
                     </a>
                   </li>
@@ -109,9 +112,9 @@
 
   <!--================ Inspired Product Area =================-->
   <section class="inspired_product_area section_gap_bottom_custom">
-    <div class="container">
+    
       @RenderBody()
-    </div>
+   
   </section>
   <!--================ End Inspired Product Area =================-->
 
