--- a/PRNAssG8/PRNAssG8/Views/HomePage/Index.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/HomePage/Index.cshtml
@@ -45,7 +45,7 @@
               </div>
             </div>
             <div class="product-btm">
-              <a href="#" class="d-block">
+              <a  asp-controller="Product" asp-action="Detail" asp-route-id=@p.ProductId class="d-block">
                 <h4>@p.ProductName</h4>
               </a>
               <div class="mt-3">
