--- a/PRNAssG8/PRNAssG8/Views/Product/Detail.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Product/Detail.cshtml
@@ -6,6 +6,9 @@
 }
 
 @{
+    DateTime Datenow = DateTime.Now;
+     DateTime date = ViewBag.product.Date;
+    double minP = ViewBag.product.Price + 20;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -13,6 +16,7 @@
 <html>
 <head>
 <title>Page Title</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <style>
     .all{
@@ -27,25 +31,47 @@
 </head>
 <body>
     <div class="all">
-        @foreach(var p in ViewBag.product)
-        {
+        
+            
             <div >
-                <img src="~/views/img/m-i-ch-nh-h-ng-lenovo-lp40-tws-tai-nghe-kh-ng-d-y-bluetooth.jpg_q90.jpg"  style="align-items:center;" width=900 height=500 >
+                <img src="~/img/product/@ViewBag.product.Image"  style="align-items:center;" width=900 height=500 >
             </div>
             <div>
-                <h1>@p.ProductName</h1>
-                <h4>@p.Date</h4>
-                <h4>@p.Price</h4>
+                <h1 style="font-family:Times New Roman, Times, serif;">@ViewBag.product.ProductName -
                 @foreach(var c in ViewBag.cate)
                 {
-                    @if (@p.CategoryId == @c.CategoryId)
+                    @if (@ViewBag.product.CategoryId == @c.CategoryId)
                     {
-                        <h4>@c.CategoryName</h4>
+                        @c.CategoryName
                     }
                 }
-                <h5>@p.Detail</h5>
+                </h1><br />
+                <div class="input-group">
+                    <span class="input-group-text">Time</span>
+                 <span  class="border" style="font-size:20px; padding: 5px;">@date.ToString("dd/MMM/yyyy - HH:mm") to @date.AddDays(2).ToString("dd/MMM/yyyy - HH:mm")</span>
+                <span class="input-group-text">$</span>   
+             </div><br />
+                @if(@Datenow.Date >= @date.Date && @Datenow.Date <= @date.AddDays(2).Date )
+                {
+                    <form>
+                        <div class="input-group">
+                        <span class="input-group-text">Price</span>
+                        <input  type="number" value="@ViewBag.product.Price" step="20" min="@minP" name="Price">
+                         <button type="submit"><i class="bi bi-shift-fill"></i></button>    
+                        </div>
+
+                    </form>
+                }
+                @if(@Datenow.Date < @date.Date || @Datenow.Date > @date.AddDays(2).Date){
+                    <div class="input-group">
+                        <span class="input-group-text">Price</span>
+                        <input type="number" value="@ViewBag.product.Price" name="Price" readonly>
+                        </div>
+                }
+                <br />
+                <p>@ViewBag.product.Detail</p>
             </div>
-        }
+        
        
 
     </div>
