--- a/PRNAssG8/PRNAssG8/Views/Product/Insert.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Product/Insert.cshtml
@@ -38,7 +38,7 @@
             </div><br/>
 
             <div class="input-group">
-            <span class="input-group-text">Price</span><input type="text" name="Price" class="form-control"/>
+            <span class="input-group-text">Price</span><input type="text" name="Price" class="form-control"/><span class="input-group-text">$</span>   
             </div><br/>
 
             <div class="input-group">
