--- a/PRNAssG8/PRNAssG8/Views/Product/Detail.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Product/Detail.cshtml
@@ -28,6 +28,13 @@
     }
  
 </style>
+<script>
+    function myFunction() {
+        var dao = document.getElementById("p").value;
+        if(dao> @ViewBag.product.Price+20)
+            alert("successful auction!!!")
+    }
+</script>
 </head>
 <body>
     <div class="all">
@@ -36,6 +43,7 @@
             <div >
                 <img src="~/img/product/@ViewBag.product.Image"  style="align-items:center;" width=900 height=500 >
             </div>
+
             <div>
                 <h1 style="font-family:Times New Roman, Times, serif;">@ViewBag.product.ProductName -
                 @foreach(var c in ViewBag.cate)
@@ -46,18 +54,30 @@
                     }
                 }
                 </h1><br />
+
                 <div class="input-group">
                     <span class="input-group-text">Time</span>
-                 <span  class="border" style="font-size:20px; padding: 5px;">@date.ToString("dd/MMM/yyyy - HH:mm") to @date.AddDays(2).ToString("dd/MMM/yyyy - HH:mm")</span>
-                <span class="input-group-text">$</span>   
+                 <span  class="border" style="font-size:20px; padding: 5px;">@date.ToString("dd/MMM/yyyy - HH:mm") to @date.AddDays(2).ToString("dd/MMM/yyyy - HH:mm")</span>  
              </div><br />
+
                 @if(@Datenow.Date >= @date.Date && @Datenow.Date <= @date.AddDays(2).Date )
                 {
-                    <form>
-                        <div class="input-group">
+                    <form asp-controller="Product" asp-action="Detail" method="post">
+
+                         <div class="input-group">
+                         <input type="text" name="ProductId" value="@ViewBag.product.ProductId" style="display:none;" /> 
+                         <input type="text" name="ProductName" value="@ViewBag.product.ProductName" style="display:none;" /> 
+                         <input type="text" name="UserId" value="1" style="display:none;" /> 
+                         <input type="text" name="Image" value="@ViewBag.product.Image" style="display:none;" /> 
+                         <input type="text" name="Date" value="@ViewBag.product.Date" style="display:none;" /> 
+                         <input type="text" name="Detail" value="@ViewBag.product.Detail" style="display:none;" /> 
+                         <input type="text" name="Status" value="@ViewBag.product.Status" style="display:none;" /> 
+                         <input type="text" name="CategoryId" value="@ViewBag.product.CategoryId" style="display:none;" /> 
+                         
+                        
                         <span class="input-group-text">Price</span>
-                        <input  type="number" value="@ViewBag.product.Price" step="20" min="@minP" name="Price">
-                         <button type="submit"><i class="bi bi-shift-fill"></i></button>    
+                        <input  type="number" id="p" value="@ViewBag.product.Price"  min="@minP" name="Price"><span class="input-group-text">$</span>  
+                         <button type="submit"  onclick="myFunction()"><i class="bi bi-shift-fill"></i></button>   
                         </div>
 
                     </form>
@@ -65,10 +85,11 @@
                 @if(@Datenow.Date < @date.Date || @Datenow.Date > @date.AddDays(2).Date){
                     <div class="input-group">
                         <span class="input-group-text">Price</span>
-                        <input type="number" value="@ViewBag.product.Price" name="Price" readonly>
+                        <input type="number" value="@ViewBag.product.Price" name="Price" readonly><span class="input-group-text">$</span>  
                         </div>
                 }
                 <br />
+
                 <p>@ViewBag.product.Detail</p>
             </div>
         
