--- a/PRNAssG8/PRNAssG8/Views/Product/Insert.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Product/Insert.cshtml
@@ -27,24 +27,44 @@
 
    
         <form asp-controller="Product" asp-action="Insert" method="post">
-            ProductName: <input type="text" name="ProductName" class="form-control"/><br />
-            <input type="text" name="UserId" value="1" style="display:none;" />
-            Image:<input type="file" name="Image" class="form-control"/><br />
-            Price:<input type="text" name="Price" class="form-control"/><br />
-            Date:<input type="date" name="Date" class="form-control"/><br />
+            <div class="input-group">
+            <span class="input-group-text">ProductName</span><input type="text" name="ProductName" class="form-control"/>
+            </div><br/>
+
+            <input type="text" name="UserId" value="3" style="display:none;" /> 
+
+            <div class="input-group">
+            <input type="file" name="Image" class="form-control"/><span class="input-group-text">Image</span>   
+            </div><br/>
+
+            <div class="input-group">
+            <span class="input-group-text">Price</span><input type="text" name="Price" class="form-control"/><span class="input-group-text">$</span>   
+            </div><br/>
+
+            <div class="input-group">
+            <span class="input-group-text">Date</span><input type="date" name="Date" class="form-control"/>
+            </div><br/>
+
             <div class="input-group">
             <span class="input-group-text">Detail</span><textarea name="Detail" class="form-control"></textarea>
-            </div><br />
-            CategoryId:<select name="CategoryId" class="form-select">
+            </div><br/>
+
+            <div class="input-group">
+            <span class="input-group-text">CategoryId</span><select name="CategoryId" class="form-select">
                     @foreach(var p in ViewBag.cate)
                     {
                         <option value="@p.CategoryId">@p.CategoryName</option>
                     }
-                </select><br />
-            Status:<select name="Status" class="form-select">
+                </select>
+            </div><br/>
+
+            <div class="input-group">
+            <span class="input-group-text">Detail</span><select name="Status" class="form-select">
                 <option value="1">activate</option>
                 <option value="0">non  activate</option>
-            </select><br />
+            </select>
+            </div><br/>
+
              <button type="submit"  class="btn btn-primary">Add</button>
 
         </form>
