--- a/PRNAssG8/PRNAssG8/Views/Shared/_Layout.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                     <a class="nav-link" asp-controller="Product" asp-action="Insert" >Up Load</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" asp-controller="Admin" asp-action="Index" >Admin</a>
+                    <a class="nav-link" asp-controller="Admin" asp-action="Index">Manager</a>
                   </li>
                  </ul> 
                  
