fix manager, insert

--- a/PRNAssG8/PRNAssG8/Views/Admin/Manager.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Admin/Manager.cshtml
@@ -64,8 +64,8 @@
                     
                   </td>
                   <td>
-                     <a class="nav-link" asp-controller="admin" asp-action="Update" asp-route-id=@p.ProductId >Edit</a>
-                     <a class="nav-link" asp-controller="admin" asp-action="Delete" asp-route-id=@p.ProductId >Delete</a>
+                     <a class="nav-link" asp-controller="Admin" asp-action="Update" asp-route-id=@p.ProductId >Edit</a>
+                     <a class="nav-link" asp-controller="Admin" asp-action="Delete" asp-route-id=@p.ProductId >Delete</a>
                   </td>
                 </tr>
                 
