--- a/PRNAssG8/PRNAssG8/Views/Shared/_Layout.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light w-100">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <a class="navbar-brand logo_h" asp-controller= "home" asp-action = "index">
+          <a class="navbar-brand logo_h" asp-controller= "HomePage" asp-action = "Index">
             <img src="~/img/logo.png" alt="" />
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -71,7 +71,7 @@
                     <a class="nav-link" asp-controller="Product" asp-action="Insert" >Up Load</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" asp-controller="Admin" asp-action="Index">Manager</a>
+                    <a class="nav-link" asp-controller="Admin" asp-action="Manager">Manager</a>
                   </li>
                  </ul> 
                  
