--- a/PRNAssG8/PRNAssG8/Views/Product/Detail.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Product/Detail.cshtml
@@ -73,7 +73,7 @@ var x = setInterval(function() {
         
             
             <div >
-                <img src="~/img/product/@ViewBag.product.Image"  style="align-items:center;" width=auto height=500 >
+                <img src="~/img/product/@ViewBag.product.Image" class="img-fluid" style="align-items:center;">
             </div>
 
             <div>
