--- a/PRNAssG8/PRNAssG8/Views/Admin/Update.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Admin/Update.cshtml
@@ -19,6 +19,28 @@
         box-shadow: 3px 8px #888888;
     }
 </style>
+
+<script>
+    function myFunction() {
+        var p = document.getElementById("pname").value;
+        var p1 = document.getElementById("img").value;
+        var p2 = document.getElementById("pri").value;
+        var p3 = document.getElementById("dat").value;
+        var p4 = document.getElementById("dtl").value;
+        if(p != "" && p1 != "" && p2 != "" && p3 != "" && p4 != "")
+            alert("Edit Successful!!!")
+        else if(p == "" || p1 == "" || p2 == "" || p3 == "" || p4 == "" ){
+            alert("Something Null! Please insert!!!")
+            location.reload()
+        }
+            
+        else {
+            alert("Eror!!!")
+            location.reload()
+        }
+    }
+</script>
+
 </head>
 <body>
     <div class="all">
@@ -28,23 +50,23 @@
             <input type="text" name="ProductId" class="form-control" style="display:none;" value="@ViewBag.Product.ProductId">
             <input type="text" name="UserId" class="form-control" style="display:none;" value="@ViewBag.Product.UserId">
             <div class="input-group">
-            <span class="input-group-text">ProductName</span><input type="text" name="ProductName" class="form-control" value="@ViewBag.Product.ProductName"/>
+            <span class="input-group-text">ProductName</span><input type="text" id='pname' name="ProductName" class="form-control" value="@ViewBag.Product.ProductName"/>
             </div><br/>
 
             <div class="input-group">
-            <input type="file" name="Image" class="form-control"/><span class="input-group-text" value="@ViewBag.Product.Image">Image</span>   
+            <input type="file" id='img' name="Image" class="form-control"/><span class="input-group-text" value="@ViewBag.Product.Image">Image</span>   
             </div><br/>
 
             <div class="input-group">
-            <span class="input-group-text">Price</span><input type="text" name="Price" class="form-control" value="@ViewBag.Product.Price"><span class="input-group-text">$</span>   
+            <span class="input-group-text">Price</span><input type="text" id='pri' name="Price" class="form-control" value="@ViewBag.Product.Price"><span class="input-group-text">$</span>   
             </div><br/>
 
             <div class="input-group">
-            <span class="input-group-text">Date</span><input type="date" name="Date" class="form-control" value="@ViewBag.Product.Date">
+            <span class="input-group-text">Date</span><input type="date" id='dat' name="Date" class="form-control" value="@ViewBag.Product.Date">
             </div><br/>
 
             <div class="input-group">
-            <span class="input-group-text">Detail</span><textarea name="Detail" class="form-control" >@ViewBag.Product.Detail</textarea>
+            <span class="input-group-text">Detail</span><textarea id='dtl' name="Detail" class="form-control" >@ViewBag.Product.Detail</textarea>
             </div><br/>
 
             <div class="input-group">
@@ -72,7 +94,7 @@
                 </select>
             </div><br/>
 
-             <button type="submit"  class="btn btn-primary">Add</button>
+             <button type="submit" onclick="myFunction()"  class="btn btn-primary">Edit</button>
 
         </form>
     </div>
