--- a/PRNAssG8/PRNAssG8/Views/Product/Detail.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Product/Detail.cshtml
@@ -32,7 +32,7 @@
 <script>
     function myFunction() {
         var dao = document.getElementById("p").value;
-        if(dao> @ViewBag.product.Price)
+        if(dao> @ViewBag.product.Price+19)
             alert("successful auction!!!")
     }
 // Set the date we're counting down to
