--- a/PRNAssG8/PRNAssG8/Views/Shared/_Layout.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
               <div class="col-lg-5 pr-0">
                 <ul class="nav navbar-nav navbar-right right_nav pull-right">
                   <li class="nav-item">
-                    <a href="#" class="icons">
+                    <a class="icons" asp-controller="Search" asp-action="Tim">
                       <i class="ti-search" aria-hidden="true"></i>
                     </a>
                   </li>
