--- a/PRNAssG8/PRNAssG8/Views/HomePage/Index.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/HomePage/Index.cshtml
@@ -36,7 +36,7 @@
                 <form asp-controller="HomePage" asp-action="Index" method="post">
 
                     <div class="col-md-12 form-group">
-                        <input type="text" class="form-control" id="productname" name="productname" placeholder="Product Name">
+                        <input type="text" class="form-control" name="name" placeholder="Product Name">
                     </div>
                    
                     <div class="col-md-12 form-group">
