--- a/PRNAssG8/PRNAssG8/Views/Shared/_Layout.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="icons">
+                    <a class="icons" asp-controller="Login" asp-action="Lo" >
                       <i class="ti-user" aria-hidden="true"></i>
                     </a>
                   </li>
