--- a/PRNAssG8/PRNAssG8/Views/Search/Tim.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Search/Tim.cshtml
@@ -49,7 +49,7 @@
                 <form asp-controller="Search" asp-action="Tim" method="post">
 
                     <div class="col-md-12 form-group">
-                        <input type="text" class="form-control" id="productname" name="productname" placeholder="Product Name">
+                        <input type="text" class="form-control" name="name" placeholder="Product Name">
                     </div>
                    
                     <div class="col-md-12 form-group">
