--- a/PRNAssG8/PRNAssG8/Views/Login/Lo.cshtml
+++ b/PRNAssG8/PRNAssG8/Views/Login/Lo.cshtml
@@ -7,8 +7,8 @@
 }
 
 <style>
-    .col-md-6 form-group p_star{
-        margin: 0 auto;
+    .returning_customer{
+        margin-left: 200px;
     }
 </style>
 
@@ -46,6 +46,7 @@
                 
                 name="name"
                 value=" "
+                require=""
               />
               <span
                 class="placeholder"
@@ -58,6 +59,7 @@
                 class="form-control"
                 name="password"
                 value=""
+                require=""
               />
               <span class="placeholder" data-placeholder="Password"></span>
             </div>
